--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">AppStore</string>
+
+    <string-array name="pilih_gender">
+        <item>Laki - laki</item>
+        <item>Perempuan</item>
+    </string-array>
 </resources>
